--- a/BTCPayServer/Views/PaymentRequest/ViewPaymentRequest.cshtml
+++ b/BTCPayServer/Views/PaymentRequest/ViewPaymentRequest.cshtml
@@ -201,7 +201,7 @@ else
                             <span>Updated {{lastUpdated}}</span>
                         </div>
                         <div >
-                            <span class="text-muted">Powered by </span><a href="https://btcpayserver.org" target="_blank">BTCPay Server</a>
+                            <span class="text-muted">Powered by </span><a href="https://vend.com.au" target="_blank">Vend</a>
                         </div>
                     </div>
                 </div>
