--- a/BTCPayServer/Views/Home/Home.cshtml
+++ b/BTCPayServer/Views/Home/Home.cshtml
@@ -9,7 +9,8 @@
         <div class="header-content-inner text-white">
             <h1>Get Started With Digital Payments</h1>
             <hr />
-            <p>Accept Bitcoin, Litecoin and lightning payments, store and spend them securely, or convert them into dollars instantly.</p>
+            <p>Accept Bitcoin, Litecoin and lightning payments, store and spend them securely,
+            <br />or convert them into dollars instantly.</p>
             <a href="https://register.skrillo.com.au/Account/Register" style="background-color: #fff;color: #222;display:inline-block;text-align: center;white-space: nowrap;vertical-align: middle;user-select: none;line-height: 1.25;font-size: 1rem;text-decoration:none;font-weight: 700;    text-transform: uppercase;border: none;border-radius: 6px;padding: 15px 20px;">Getting started</a>
         </div>
     </div>
